[2] Implemented a much better method for tracking ConFile entries, as well as adding a few more parsable entries.

--- a/BF2ScriptingEngine/BF2ScriptingEngine.csproj
+++ b/BF2ScriptingEngine/BF2ScriptingEngine.csproj
@@ -45,20 +45,20 @@
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\IntExtensions.cs" />
     <Compile Include="ObjectType.cs" />
+    <Compile Include="Scripting\BaseTemplates\GeometryTemplate.cs" />
+    <Compile Include="Scripting\ChildTemplate.cs" />
+    <Compile Include="Scripting\ConFileEntry.cs" />
+    <Compile Include="Scripting\Expression.cs" />
     <Compile Include="Scripting\ObjectReference.cs" />
-    <Compile Include="Scripting\Assignable.cs" />
     <Compile Include="Scripting\Components\Ability.cs" />
     <Compile Include="Scripting\Components\Armor.cs" />
     <Compile Include="Scripting\Components\HelpHud.cs" />
-    <Compile Include="Scripting\Conditional.cs" />
+    <Compile Include="Scripting\Statement.cs" />
     <Compile Include="Scripting\GeometryTemplates\SkinnedMesh.cs" />
     <Compile Include="Scripting\Attributes\IndexedList.cs" />
     <Compile Include="Scripting\Interfaces\IComponent.cs" />
-    <Compile Include="Scripting\Interfaces\IObjectProperty.cs" />
-    <Compile Include="Scripting\Interfaces\IObjectTemplate.cs" />
     <Compile Include="LogEntry.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="Scripting\Attributes\ComponentName.cs" />
     <Compile Include="Scripting\Components\AbilityHud.cs" />
     <Compile Include="Scripting\Components\Radio.cs" />
     <Compile Include="Scripting\Components\VehicleHud.cs" />
@@ -89,6 +89,7 @@
     <Compile Include="Scripting\BaseTemplates\AiTemplate.cs" />
     <Compile Include="Scripting\BaseTemplates\KitTemplate.cs" />
     <Compile Include="Scripting\ObjectProperty.cs" />
+    <Compile Include="Tokenizer\TokenArgs.cs" />
     <Compile Include="Scripting\RemComment.cs" />
     <Compile Include="Scripting\BaseTemplates\ObjectTemplate.cs" />
     <Compile Include="Tokenizer\Token.cs" />
