[3] Added support for variable/constant values, as well as ObjectMethods

--- a/BF2ScriptingEngine/BF2ScriptingEngine.csproj
+++ b/BF2ScriptingEngine/BF2ScriptingEngine.csproj
@@ -44,15 +44,27 @@
     <Compile Include="Extensions\Enum.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\IntExtensions.cs" />
+    <Compile Include="Extensions\PropertyInfoExt.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="ObjectEqualityComparer.cs" />
     <Compile Include="ObjectType.cs" />
+    <Compile Include="Scripting\Attributes\Comment.cs" />
+    <Compile Include="Scripting\Attributes\Component.cs" />
+    <Compile Include="Scripting\Attributes\ExistingObject.cs" />
+    <Compile Include="Scripting\Attributes\Quoted.cs" />
     <Compile Include="Scripting\BaseTemplates\GeometryTemplate.cs" />
     <Compile Include="Scripting\ChildTemplate.cs" />
     <Compile Include="Scripting\ConFileEntry.cs" />
+    <Compile Include="Scripting\Converter.cs" />
+    <Compile Include="Scripting\Enumerations\MapIconSize.cs" />
     <Compile Include="Scripting\Expression.cs" />
+    <Compile Include="Scripting\GeometryTemplates\BundledMesh.cs" />
+    <Compile Include="Scripting\ObjectMethod.cs" />
     <Compile Include="Scripting\ObjectReference.cs" />
     <Compile Include="Scripting\Components\Ability.cs" />
     <Compile Include="Scripting\Components\Armor.cs" />
     <Compile Include="Scripting\Components\HelpHud.cs" />
+    <Compile Include="Scripting\ObjectTemplates\SimpleObject.cs" />
     <Compile Include="Scripting\Statement.cs" />
     <Compile Include="Scripting\GeometryTemplates\SkinnedMesh.cs" />
     <Compile Include="Scripting\Attributes\IndexedList.cs" />
@@ -89,6 +101,7 @@
     <Compile Include="Scripting\BaseTemplates\AiTemplate.cs" />
     <Compile Include="Scripting\BaseTemplates\KitTemplate.cs" />
     <Compile Include="Scripting\ObjectProperty.cs" />
+    <Compile Include="Scripting\ValueInfo.cs" />
     <Compile Include="Tokenizer\TokenArgs.cs" />
     <Compile Include="Scripting\RemComment.cs" />
     <Compile Include="Scripting\BaseTemplates\ObjectTemplate.cs" />
