--- a/BF2ScriptingEngine/BF2ScriptingEngine.csproj
+++ b/BF2ScriptingEngine/BF2ScriptingEngine.csproj
@@ -50,14 +50,14 @@
     <Compile Include="ObjectEqualityComparer.cs" />
     <Compile Include="ReferenceManager.cs" />
     <Compile Include="ScopeType.cs" />
-    <Compile Include="Scripting\CollisionManager.cs" />
+    <Compile Include="Scripting\Abstract\CollisionManager.cs" />
     <Compile Include="Scripting\RunStatement.cs" />
     <Compile Include="ReferenceType.cs" />
     <Compile Include="Scope.cs" />
     <Compile Include="Scripting\Attributes\Comment.cs" />
     <Compile Include="Scripting\Attributes\Component.cs" />
     <Compile Include="Scripting\Attributes\Quoted.cs" />
-    <Compile Include="Scripting\BaseTemplates\GeometryTemplate.cs" />
+    <Compile Include="Scripting\Abstract\GeometryTemplate.cs" />
     <Compile Include="Scripting\ChildTemplate.cs" />
     <Compile Include="Scripting\ConFileEntry.cs" />
     <Compile Include="Scripting\Converter.cs" />
@@ -97,7 +97,7 @@
     <Compile Include="Scripting\ObjectTemplates\Kit.cs" />
     <Compile Include="Scripting\ObjectTemplates\PlayerControlObject.cs" />
     <Compile Include="Scripting\ObjectTemplates\GenericFireArm.cs" />
-    <Compile Include="Scripting\BaseTemplates\AiTemplatePlugin.cs" />
+    <Compile Include="Scripting\Abstract\AiTemplatePlugin.cs" />
     <Compile Include="Scripting\AiTemplatePlugins\Armament.cs" />
     <Compile Include="Scripting\ConFileObject.cs" />
     <Compile Include="Scripting\AiTemplatePlugins\Mobile.cs" />
@@ -106,16 +106,16 @@
     <Compile Include="Scripting\ObjectTemplates\ItemContainer.cs" />
     <Compile Include="Scripting\AiTemplatePlugins\Physical.cs" />
     <Compile Include="Scripting\Attributes\PropertyName.cs" />
-    <Compile Include="Scripting\BaseTemplates\AiTemplate.cs" />
-    <Compile Include="Scripting\BaseTemplates\KitTemplate.cs" />
+    <Compile Include="Scripting\Abstract\AiTemplate.cs" />
+    <Compile Include="Scripting\Abstract\KitTemplate.cs" />
     <Compile Include="Scripting\ObjectProperty.cs" />
     <Compile Include="Scripting\ValueInfo.cs" />
     <Compile Include="Tokenizer\TokenArgs.cs" />
     <Compile Include="Scripting\RemComment.cs" />
-    <Compile Include="Scripting\BaseTemplates\ObjectTemplate.cs" />
+    <Compile Include="Scripting\Abstract\ObjectTemplate.cs" />
     <Compile Include="Tokenizer\Token.cs" />
     <Compile Include="Tokenizer\Tokenizer.cs" />
-    <Compile Include="Scripting\BaseTemplates\WeaponTemplate.cs" />
+    <Compile Include="Scripting\Abstract\WeaponTemplate.cs" />
     <Compile Include="Scripting\AiTemplatePlugins\Unit.cs" />
     <Compile Include="Tokenizer\TokenType.cs" />
   </ItemGroup>
